<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/startFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_bubbles_1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="@dimen/dp_218"
        android:text="@string/spiice"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_96" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_start"
        style="@style/ButtonLayoutStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="@dimen/dp_602"
        android:text="@string/discover_the_platform" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_loginLauncher"
        style="@style/TextRegistrationLayoutStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="@dimen/dp_693"
        android:text="@string/you_have_an_account_log_in" />

</FrameLayout>