<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_bubbles_1"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:text="@string/spiice"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_96"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dp_218" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:text="@string/discover_the_platform"
        android:textSize="@dimen/sp_18"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dp_602"
        android:background="@drawable/btn_start" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_loginLauncher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:text="@string/you_have_an_account_log_in"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:background="@null"
        android:layout_marginTop="@dimen/dp_693"/>

</FrameLayout>