<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@drawable/background_bubbles_4"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_skip4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@null"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:text="@string/spiice"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_32"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dp_48"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:background="@drawable/illustration_phone"
        android:layout_marginTop="@dimen/dp_170"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:text="@string/chat"
        android:textSize="@dimen/sp_18"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_643"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:background="@drawable/diaporama_4"
        android:layout_marginTop="@dimen/dp_734"/>


</FrameLayout>